# COXIT_pdf_analyzer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: sql_app.db
src/: logger_config.py
src/app/: config.py  main.py
src/app/api/: openai_client.py
src/app/db/: database.py
src/app/models/: document.py  shemas.py
src/app/prompts/: summarized_prompt.py
src/app/services/: db_service.py
src/app/utils/: exceptions.py  helpers.py
static/: index.html  script.js  style.css
